<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomSheet">

        <!-- Sorting Section -->
        <TextView
            android:id="@+id/textSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/sort_by"
            style="@style/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Created At Pill -->
        <com.google.android.material.chip.Chip
            android:id="@+id/chipCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:checkable="true"
            android:text="@string/created_at"
            app:layout_constraintEnd_toStartOf="@id/chipUpdatedAt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSortBy" />

        <!-- Updated At Pill -->
        <com.google.android.material.chip.Chip
            android:id="@+id/chipUpdatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:checkable="true"
            android:text="@string/updated_at"
            app:layout_constraintEnd_toStartOf="@id/chipName"
            app:layout_constraintStart_toEndOf="@+id/chipCreatedAt"
            app:layout_constraintTop_toBottomOf="@+id/textSortBy" />

        <!-- Updated At Pill -->
        <com.google.android.material.chip.Chip
            android:id="@+id/chipName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:checkable="true"
            android:text="@string/names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chipUpdatedAt"
            app:layout_constraintTop_toBottomOf="@+id/textSortBy" />

        <View
            android:id="@+id/horizontalLine1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_margin="@dimen/dp_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipCreatedAt"
            android:background="@drawable/star_wars_gradient"/>

        <!-- Filtering Section -->
        <TextView
            android:id="@+id/textFilterBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/filter"
            android:layout_marginTop="@dimen/dp_20"
            style="@style/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalLine1" />

        <TextView
            android:id="@+id/textHairColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/hair_color"
            style="@style/Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFilterBy" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/hairColorChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHairColor" />

        <TextView
            android:id="@+id/textSkinColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/skin_color"
            style="@style/Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hairColorChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/skinColorChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSkinColor" />

        <TextView
            android:id="@+id/textEyeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/eye_color"
            style="@style/Description"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skinColorChipGroup" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/eyeColorChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEyeColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

